--- a/page1.html
+++ b/page1.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>page 1</title>
 		<meta charset="UTF-8" />
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+				<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<script src="LocalConnection.js"></script>
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
 <script>
 			 p1version='none';
 			set='none';
