--- a/page1.html
+++ b/page1.html
@@ -119,7 +119,7 @@ else if(set3==1){
 
 else{$('.box').css('background-color', '#FFFFFF');}	
 });
-
+window.setTimeout('window.location.reload()',13000);
 		</script>
 	</head>
 
