--- a/page2.html
+++ b/page2.html
@@ -150,7 +150,7 @@ else if(set3==1){
 
 else{$('.box').css('background-color', '#FFFFFF');}	
 });
-
+window.setTimeout('window.location.reload()',10000);
 		</script>
 	</head>
 	<style>
