--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ $('.des3').css('display','none');
 
 </script>
 <body>
-<div class="des1" onclick="window.open('./page1.html','page1','width=200 height=600 left=50')"></div>
-<div class="des2" onclick="window.open('./page2.html','page2','width=200 height=600 left=150');return false"></div>
-<div class="des3" onclick="window.open('./page3.html','page3','width=200 height=600 left=250');return false"></div>
+<div class="des1" onclick="window.open('./page1.html','page1','width=200 height=600 left=50 resizable=yes')"></div>
+<div class="des2" onclick="window.open('./page2.html','page2','width=200 height=600 left=150 resizable=yes');return false"></div>
+<div class="des3" onclick="window.open('./page3.html','page3','width=200 height=600 left=250 resizable=yes');return false"></div>
 <p> </br></br></br></br></br>안녕하세요 테스터님.</br>
   테스트에 앞서 간단한 확인 과정을 거쳐주세요.</br></br>
 1.브라우저의 줌(확대/축소)가 100%로 되어있는지 확인해주세요.</br>
